# tauri-deno-solidjs

./: .gitignore  README.md  app.config.ts  cli.ts  deno.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.devcontainer/: devcontainer.json
prisma/: schema.prisma
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: db.ts  index.ts  server.ts
