[package]
name = "tuari-deno"
version = "0.1.0"
description = "A Tauri App"
authors = ["raine-works"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
anyhow = "1.0"
lzma-rs = "0.3.0"
md5 = "0.7.0"
reqwest = { version = "0.12", features = ["blocking"] }
sha256 = "1.0.3"
tar = "0.4.40"
tempfile = "3.10.1"
zip-extract = "0.1.3"

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.2.0", features = ["unsafe-headers"] }
tauri-plugin-cors-fetch = "2.1.1"

